@@ -19,6 +19,7 @@ XX/XX/25
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
 * Implemented a better linear regression algorithm for SPCC (!853)
 * Python scripts are now sorted alphabetically (#1559)
+* Add an optional rate limit for smooth scroll zoom speed (#1576)
 
 
 siril 1.4.0-beta1
